; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html.c_rndr_superscript.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html.c_rndr_superscript.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i32, i32 }

@.str = private unnamed_addr constant [6 x i8] c"<sup>\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"</sup>\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.buf*, %struct.buf*, i8*)* @rndr_superscript to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rndr_superscript(%struct.buf* %0, %struct.buf* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.buf*, align 8
  %6 = alloca %struct.buf*, align 8
  %7 = alloca i8*, align 8
  store %struct.buf* %0, %struct.buf** %5, align 8
  store %struct.buf* %1, %struct.buf** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load %struct.buf*, %struct.buf** %6, align 8
  %9 = icmp ne %struct.buf* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load %struct.buf*, %struct.buf** %6, align 8
  %12 = getelementptr inbounds %struct.buf, %struct.buf* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %10, %3
  store i32 0, i32* %4, align 4
  br label %29

16:                                               ; preds = %10
  %17 = load %struct.buf*, %struct.buf** %5, align 8
  %18 = call i32 @BUFPUTSL(%struct.buf* %17, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %19 = load %struct.buf*, %struct.buf** %5, align 8
  %20 = load %struct.buf*, %struct.buf** %6, align 8
  %21 = getelementptr inbounds %struct.buf, %struct.buf* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.buf*, %struct.buf** %6, align 8
  %24 = getelementptr inbounds %struct.buf, %struct.buf* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @bufput(%struct.buf* %19, i32 %22, i32 %25)
  %27 = load %struct.buf*, %struct.buf** %5, align 8
  %28 = call i32 @BUFPUTSL(%struct.buf* %27, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %4, align 4
  br label %29

29:                                               ; preds = %16, %15
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @BUFPUTSL(%struct.buf*, i8*) #1

declare dso_local i32 @bufput(%struct.buf*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
